base code for ex3

--- a/exercise3.html
+++ b/exercise3.html
@@ -2,15 +2,30 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style3.css">
-
     <title>Exercise 3</title>
     <style>
     
     </style>
 </head>
 <body>
+    <nav class="navbar">
+        <ul>
+            <li class="dropdown">
+                <a href="https://schulich.ucalgary.ca/">SCHULICH School of Engineering</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Research</a></li>
+                </ul>
+            </li>
+            <li><a href="https://www.ucalgary.ca/future-students/undergraduate/explore-programs/electrical-engineering">Electrical Engineering</a></li>
+            <li><a href="https://schulich.ucalgary.ca/chemical-petroleum/home">Chemical Engineering Department</a></li>
+            <li><a href="https://schulich.ucalgary.ca/biomedical/home">Biomedical Engineering Department</a></li>
+            <li><a href="https://schulich.ucalgary.ca/geomatics">Department of Geomatics Engineering</a></li>
+        </ul>
+    </nav>
 
-     <div class="Container">
+    <div class="Container">
         <div class="item">
             <img src="schulich.png">
             <h3>SCHULICH School of Engineering</h3>
